Mobile Alignment Fixed

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     --bs-white: #fff;
 }
 body {
-    background-color: #0e0019 !important;
+    background-color: #140024 !important;
     font-family: "Poppins", serif !important;
 
 }
@@ -76,6 +76,10 @@ header {
 
     margin-top: 100px;
 
+}
+.container.heroPage {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .welcome {
@@ -497,6 +501,9 @@ footer ul>li>a:hover{
 /* Media queries */
 
 @media screen and (max-width : 600px) {
+    /* .heroPage img {
+        width: 100%;
+    } */
     .experienceTimeLine {
         margin: 50px auto;
     }
